started work on 'i' json compliance